# codespell

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  Binary.py  Catching_the_ball_game.py  Chatbot.py  Checking Binary Tree  Convert Matrix to Custom Tuple Matrix.py  DFA.py  Fibonaccci Series  Fibonacci.py  Finding Largest Value In Each Tree Row  MANIFEST.in  Makefile  N Queen Problem  NEWS  Num.py  QuadraticEquation.js  README  README.markdown  README.md  README.rst  RemoveEmptytuple.py  Speech.py  StenographyEncoding.py  Symmetric-Tree.py  TODO  _codespell.py  anagram checkey.py  appveyor.yml  arraylist.java  batvsjok.py  binarysearch.py  calc.py  classes.py  (+26 more)
.devcontainer/: devcontainer.json  post_create.sh
.github/: CODEOWNERS  dependabot.yml  logToCs.py
.github/workflows/: autofix.yml  black.yml  codespell-private.yml  codespell-windows.yml  codespell.yml  isort.yml  mypy.yml  pre-commit.yml  release.yml  tests.yml
codespell_lib/: __init__.py  __main__.py  _codespell.py  _shtab.py  _spellchecker.py  _text_util.py  codespell.py  gen_OX.sh  spellchecker.py
codespell_lib/data/: dictionary.txt  dictionary_capitalization.txt  dictionary_code.txt  dictionary_en-GB_to_en-US.txt  dictionary_en-US_to_en-GB.txt  dictionary_en_to_en-OX.txt  dictionary_en_to_en-OX_AUTOGENERATED.txt  dictionary_from_LO.txt  dictionary_gb_to_us.txt  dictionary_informal.txt  dictionary_names.txt  dictionary_rare.txt  dictionary_usage.txt  llvm-toolchain.exclude  mine_dictionary.txt  mozilla.exclude
codespell_lib/tests/: test_basic.py  test_dictionary.py
codespell_lib/tests/data/: en_GB-additional.wordlist  en_GB-additionnal.wordlist  en_US-additional.wordlist  en_US-additionnal.wordlist
data/: dictionary.txt  linux-kernel.exclude
example/: code.c  dict.txt
python/: heap_sort.py
scripts/: zsh_completion.py
snap/: snapcraft.yaml  speech.py
tests/: test_dictionary.py
tools/: gen_OX.sh  travis_tools.sh
