[metadata]
name = codespell
version = attr: codespell_lib.__version__
maintainer = Lucas De Marchi
maintainer_email = lucas.de.marchi@gmail.com
license = GPL v2
description = Codespell
url = https://github.com/codespell-project/codespell/
download_url = https://github.com/codespell-project/codespell/
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved
    Programming Language :: Python
    Topic :: Software Development
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
platforms = any

[options]
packages =
    codespell_lib
    codespell_lib.tests
    codespell_lib.data
zip_safe = False
include_package_data = True
python_requires = >=3.7

[options.entry_points]
console_scripts = codespell = codespell_lib:_script_main

# TODO: toml will need to be updated when 3.11 comes out as it's a
# CPython module there

[options.extras_require]
dev =
    check-manifest
    flake8
    pytest
    pytest-cov
    pytest-dependency
    tomli
hard-encoding-detection = chardet
toml = tomli

[options.package_data]
codespell_lib =
    data/dictionary*.txt
    data/linux-kernel.exclude

[tool:pytest]
addopts = --cov=codespell_lib -rs --cov-report= --tb=short

[flake8]
exclude = build, ci-helpers
ignore =
